--- a/services/cbm/project.json
+++ b/services/cbm/project.json
@@ -7,14 +7,18 @@
   "targets": {
     "build": {
       "executor": "nx:run-commands",
+      "outputs": ["{workspaceRoot}/dist/services/cbm"],
       "options": {
-        "command": "webpack-cli build",
+        "command": "npx webpack-cli build",
         "args": ["--node-env=production"],
         "cwd": "services/cbm"
       },
       "configurations": {
         "development": {
           "args": ["--node-env=development"]
+        },
+        "production": {
+          "args": ["--node-env=production"]
         }
       }
     },
