feat: Implement Identity and Access Management (IAM) module with authentication and organization management
- Removed deprecated password hashing utility and integrated bcrypt directly into the authentication service.
- Added permission types and context for fine-grained access control.
- Created main application module, controller, and service for IAM.
- Developed JWT-based authentication with login, token verification, and password management functionalities.
- Established organization management with CRUD operations and validation.
- Implemented user management with role-based access and password hashing.
- Added comprehensive DTOs for user and organization data validation.
- Introduced token storage service for managing refresh tokens and blacklisting access tokens.
- Created unit tests for controllers and services to ensure functionality.
- Added utility functions for base64 encoding/decoding.
- Included test scripts for JWT generation and verification.

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,3 +3,13 @@
 /coverage
 /.nx/cache
 /.nx/workspace-data
+
+# Config files
+tsconfig*.json
+**/tsconfig*.json
+jest.config.ts
+**/jest.config.*
+
+# Generated files
+package-lock.json
+yarn.lock
