--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "mongoose": "^8.18.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
@@ -35,6 +36,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
