feat: rename agent and update development workflow in CLAUDE.md
feat: add ecosystem configuration for iam-api

feat: add dockerode and socket.io-client dependencies in package.json

docs: add README for AIWM Worker detailing features, configuration, and usage

feat: create project.json for AIWM Worker with build and serve targets

feat: implement app module for AIWM Worker

feat: add hardware module for detecting system resources

feat: implement hardware service for system information retrieval

feat: create websocket client module for communication with AIWM Controller

feat: implement websocket client service for handling WebSocket connections and commands

chore: add tsconfig files for AIWM Worker

chore: add webpack configuration for AIWM Worker

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@nestjs/websockets": "^11.1.6",
     "axios": "^1.6.0",
     "bullmq": "^5.60.0",
+    "dockerode": "^4.0.9",
     "mongoose": "^8.19.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
