feat: Refactor AIWM service to support MCP and API modes
- Split main bootstrap logic into separate functions for MCP and API servers.
- Update AgentConnectResponseDto to include MCP server configurations.
- Integrate ConfigurationModule into AgentModule for dynamic configuration.
- Enhance AgentService to retrieve AIWM base URL from configuration.
- Implement JSON-RPC 2.0 protocol in McpController for handling various methods.
- Create DTOs for JSON-RPC requests and responses.
- Update DocumentService to support advanced content update operations.
- Refactor PII module to remove unnecessary properties and streamline schema.
- Modify CBM project configuration for better service management.

--- a/services/aiwm/project.json
+++ b/services/aiwm/project.json
@@ -42,7 +42,7 @@
       "dependsOn": ["prune-lockfile", "copy-workspace-modules"],
       "executor": "nx:noop"
     },
-    "serve": {
+    "api": {
       "continuous": true,
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
@@ -50,6 +50,25 @@
       "options": {
         "buildTarget": "aiwm:build",
         "runBuildTargetDependencies": false
+      },
+      "configurations": {
+        "development": {
+          "buildTarget": "aiwm:build:development"
+        },
+        "production": {
+          "buildTarget": "aiwm:build:production"
+        }
+      }
+    },
+    "mcp": {
+      "continuous": true,
+      "executor": "@nx/js:node",
+      "defaultConfiguration": "development",
+      "dependsOn": ["build"],
+      "options": {
+        "buildTarget": "aiwm:build",
+        "runBuildTargetDependencies": false,
+        "args": ["mcp"]
       },
       "configurations": {
         "development": {
