--- a/services/iam/project.json
+++ b/services/iam/project.json
@@ -47,7 +47,7 @@
       "dependsOn": ["prune-lockfile", "copy-workspace-modules"],
       "executor": "nx:noop"
     },
-    "serve": {
+    "api": {
       "continuous": true,
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
