--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.19.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
@@ -52,6 +53,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qs": "^6.14.0",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
