--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.1",
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.0.0",
@@ -15,21 +16,24 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
-    "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/platform-socket.io": "^11.1.10",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
-    "@nestjs/websockets": "^11.1.6",
+    "@nestjs/websockets": "^11.1.10",
+    "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.13.2",
     "bullmq": "^5.60.0",
     "dockerode": "^4.0.9",
+    "ioredis": "^5.8.2",
     "mongoose": "^8.19.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "qs": "^6.14.0",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
-    "socket.io": "^4.8.1",
+    "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0",
     "zod": "^4.2.1"
